--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.cliftonlabs:json-simple:2.3.0'
-
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
