--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.8
 
@@ -12,4 +22,20 @@ dependencies {
     compile 'com.github.cliftonlabs:json-simple:2.3.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+task stage {
+    dependsOn build
+}
+
+shadowJar {
+    baseName = 'CIR'
+    classifier = null
+    version = null
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'CIR'
+    }
 }
