--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-task stage {
-    dependsOn shadowJar
+task stage(type: Copy, dependsOn: [clean, shadowJar]) {
+    from "build/libs"
+    into project.rootDir 
+    rename {
+        'app.jar'
+    }
+}
+stage.mustRunAfter(clean)
+
+clean << {
+    project.file('app.jar').delete()
 }
 
 shadowJar {
